--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Barber</title>
     <link rel="stylesheet" href="prod-assets/css/style.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <script src="https://kit.fontawesome.com/4c901afbcb.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -109,18 +111,79 @@
 <section class="py-5 position-relative">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-11 py-5">
+      <div class="col-lg-6 col-md-11 py-3 py-lg-3">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
           <img src="prod-assets/img/about-us/about-us-image.png" height="570" width="460">
         </div>
 
     </div>
+    <div class="col-lg-6 col-md-11 py-0 py-lg-3">
+      <p class="about-us__paragraph">About our company</p>
+      <h1 class="about-us__heading">6 Years experience in hair cut!</h1>
+      <p class="about-us__text py-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat iste accusantium autem facilis id quasi fugiat ea ex magni aspernatur nisi, qui nobis quia totam eius suscipit cupiditate non architecto consectetur doloribus ullam explicabo, fugit tenetur corrupti? Excepturi explicabo harum libero vel inventore iusto maiores necessitatibus! Quaerat aut molestiae, consectetur nulla rem quibusdam itaque voluptatum?</p>
+      <p><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, soluta iure nostrum eaque molestias voluptas.</strong></p>
     </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-11 py-0 px-lg-5 py-lg-2">
+        <p class="about-us__paragraph">About our company</p>
+        <h1 class="about-us__heading">New modern salon with all the equipment!</h1>
+        <p class="about-us__text py-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat iste accusantium autem facilis id quasi fugiat ea ex magni aspernatur nisi, qui nobis quia totam eius suscipit cupiditate non architecto consectetur doloribus ullam explicabo, fugit tenetur corrupti? Excepturi explicabo harum libero vel inventore iusto maiores necessitatibus! Quaerat aut molestiae, consectetur nulla rem quibusdam itaque voluptatum?</p>
+        <p><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, soluta iure nostrum eaque molestias voluptas.</strong></p>
+      </div>
+      <div class="col-lg-6 col-md-11 py-lg-2 py-5">
+        <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
+          <img src="prod-assets/img/about-us/about-us-image2.png" height="670" width="460">
+        </div>
 
+    </div>
+  </div>
 
   </div>
 </section>
 <!-- End of about us section-->
+<!-- Services -->
+<section>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="services__heading">Our services that<br /> we offer to you!</h1>
+    </div>
+  </div>
+  <div class="row align-items-center">
+    <div class="col-lg-4 col-md-10 pt-5">
+      <div class="d-flex align-item-center justify-content-center">
+      <div class="services__bg-icon">
+      <i class="las la-certificate la-5x services__icon"></i>
+      </div>
+      </div>
+      <h3 class="px-4 pt-3 text-center">Certificate</h3>
+      <p class="services__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum corporis velit.</p>
+
+    </div>
+    <div class="col-lg-4 col-md-10 pt-5">
+      <div class="d-flex align-item-center justify-content-center">
+      <div class="services__bg-icon">
+      <i class="las la-certificate la-5x services__icon"></i>
+      </div>
+      </div>
+      <h3 class="px-4 pt-3 text-center">Certificate</h3>
+      <p class="services__text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, ut.</p>
+
+    </div>
+    <div class="col-lg-4 col-md-10 pt-5">
+      <div class="d-flex align-item-center justify-content-center">
+      <div class="services__bg-icon">
+      <i class="las la-certificate la-5x services__icon"></i>
+      </div>
+      </div>
+      <h3 class="px-4 pt-3 text-center">Certificate</h3>
+      <p class="services__text text-center">Our employee got a real hair-cut certificate signed by CFG. </p>
+    </div>
+  </div>
+</div>
+</section>
+<!-- End of Services -->
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
