New team section and some changes in previous sections
Some changes in html template with using own code and bootstrap classes.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         </div>
     </div>
 </div>
+<!-- Scroll to top-->
+<div class="btn-container">
+  <button id="scrollToTop">
+    <i class="las la-level-up-alt text-white"></i>
+  </button>
+  </div>
+<!-- End of Scroll to top-->
+
   <!-- End of Preloader -->
     <main>
         <!-- Header -->
@@ -67,6 +75,7 @@
                 </div>
         </header>
         <!-- End of Header -->
+
         <!-- Slider -->
 
         <div id="sliderControls" class="carousel slide" data-ride="carousel">
@@ -111,13 +120,13 @@
 <section class="py-5 position-relative">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-11 py-3 py-lg-3">
+      <div class="col-lg-6 col-md-11 py-3 py-lg-3 about-us">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
           <img src="prod-assets/img/about-us/about-us-image.png" height="570" width="460">
         </div>
 
     </div>
-    <div class="col-lg-6 col-md-11 py-0 py-lg-3">
+    <div class="col-lg-6 col-md-11 py-0 py-lg-3 about-us2">
       <p class="about-us__paragraph">About our company</p>
       <h1 class="about-us__heading">6 Years experience in hair cut!</h1>
       <p class="about-us__text py-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat iste accusantium autem facilis id quasi fugiat ea ex magni aspernatur nisi, qui nobis quia totam eius suscipit cupiditate non architecto consectetur doloribus ullam explicabo, fugit tenetur corrupti? Excepturi explicabo harum libero vel inventore iusto maiores necessitatibus! Quaerat aut molestiae, consectetur nulla rem quibusdam itaque voluptatum?</p>
@@ -125,13 +134,13 @@
     </div>
     </div>
     <div class="row">
-      <div class="col-lg-6 col-md-11 py-0 px-lg-5 py-lg-2">
+      <div class="col-lg-6 col-md-11 py-0 px-lg-5 py-lg-2 about-us3">
         <p class="about-us__paragraph">About our company</p>
         <h1 class="about-us__heading">New modern salon with all the equipment!</h1>
         <p class="about-us__text py-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat iste accusantium autem facilis id quasi fugiat ea ex magni aspernatur nisi, qui nobis quia totam eius suscipit cupiditate non architecto consectetur doloribus ullam explicabo, fugit tenetur corrupti? Excepturi explicabo harum libero vel inventore iusto maiores necessitatibus! Quaerat aut molestiae, consectetur nulla rem quibusdam itaque voluptatum?</p>
         <p><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, soluta iure nostrum eaque molestias voluptas.</strong></p>
       </div>
-      <div class="col-lg-6 col-md-11 py-lg-2 py-5">
+      <div class="col-lg-6 col-md-11 py-lg-2 py-5 about-us4">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
           <img src="prod-assets/img/about-us/about-us-image2.png" height="670" width="460">
         </div>
@@ -143,22 +152,36 @@
 </section>
 <!-- End of about us section-->
 <!-- Services -->
-<section>
+<section class="py-5">
 <div class="container">
   <div class="row">
     <div class="col-12">
       <h1 class="services__heading">Our services that<br /> we offer to you!</h1>
     </div>
   </div>
-  <div class="row align-items-center">
+  <div class="row">
     <div class="col-lg-4 col-md-10 pt-5">
       <div class="d-flex align-item-center justify-content-center">
       <div class="services__bg-icon">
-      <i class="las la-certificate la-5x services__icon"></i>
+      <i class="las la-calendar-alt la-5x services__icon"></i>
       </div>
       </div>
-      <h3 class="px-4 pt-3 text-center">Certificate</h3>
-      <p class="services__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum corporis velit.</p>
+      <h3 class="px-4 py-3 text-center">Calendar ahead</h3>
+      <p class="showmore text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum corporis velit<span class="dots">...</span><span class="more">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, voluptatem. Explicabo, a aut non officiis quo dolor odit voluptatibus sint optio nostrum!</span><a class="btn">Read More</a></p>
+
+
+
+    </div>
+    <div class="col-lg-4 col-md-10 pt-5">
+      <div class="d-flex align-item-center justify-content-center">
+      <div class="services__bg-icon">
+      <i class="las la-globe la-5x services__icon"></i>
+      </div>
+      </div>
+      <h3 class="px-4 py-3 text-center">Global services</h3>
+      <p class="showmore text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum<span class="dots">...</span><span class="more"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate vel atque, deleniti fugiat optio nemo!</span> <a class="btn">Read More</a></p>
+
+
 
     </div>
     <div class="col-lg-4 col-md-10 pt-5">
@@ -167,23 +190,53 @@
       <i class="las la-certificate la-5x services__icon"></i>
       </div>
       </div>
-      <h3 class="px-4 pt-3 text-center">Certificate</h3>
-      <p class="services__text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, ut.</p>
+      <h3 class="px-4 py-3 text-center">Certificate</h3>
+      <p class="showmore text-center">Our employee got a real hair-cut certificate signed by CFG<span class="dots">...</span><span class="more">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A odio laudantium id iste vel nobis nihil molestias ad accusantium, ipsum expedita! Assumenda ab nisi laboriosam earum sint aspernatur corporis unde doloribus.</span> <a class="btn">Read More</a></p>
 
-    </div>
-    <div class="col-lg-4 col-md-10 pt-5">
-      <div class="d-flex align-item-center justify-content-center">
-      <div class="services__bg-icon">
-      <i class="las la-certificate la-5x services__icon"></i>
-      </div>
-      </div>
-      <h3 class="px-4 pt-3 text-center">Certificate</h3>
-      <p class="services__text text-center">Our employee got a real hair-cut certificate signed by CFG. </p>
     </div>
   </div>
+
+
 </div>
 </section>
 <!-- End of Services -->
+<!-- Team -->
+<section class="py-5">
+  <div class="container text-left">
+    <div class="row align-items-center">
+      <div class="col-lg-6 text-lg-left text-center">
+        <h1 class="team__heading">Meet our team<br />who is waiting for you!</h1>
+      </div>
+      <div class="col-lg-6 pt-4">
+        <h4 class="text-center text-lg-right">Professional Team</h4>
+      </div>
+    </div>
+    <div class="row py-5">
+      <div class="col-lg-4 col-sm-10">
+        <div class="d-flex justify-content-center align-items-center team__container">
+          <img src="prod-assets/img/team/allef-vinicius-wz9JKxDe3Pg-unsplash.jpg" class='img-fluid'>
+          <div class="team__overlay">My name is John, I'm a master barber, I started work with hair when I was a kid untill today, I'am very proud of my boys and my achievements</div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-10 py-lg-0 py-5">
+        <div class="d-flex justify-content-center align-items-center team__container">
+          <img src="prod-assets/img/team/andre-reis-_XD3D9pH83k-unsplash.jpg" class='img-fluid'>
+          <div class="team__overlay">My name is Josh, I'm a color expart, I started working here since 2013 with John, we created this mark together</div>
+
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-10">
+        <div class="d-flex justify-content-center align-items-center team__container">
+          <img src="prod-assets/img/team/israel-velis-mjLq6EL8260-unsplash.jpg" class='img-fluid'>
+          <div class="team__overlay">My name is Wuu, I'm a master hairdresser, I'm working here for 3 years and I still collecting experience</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End of Team -->
+
+
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
