--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
     </div>
 </div>
-<!-- Scroll to top-->
-<div class="btn-container">
-  <button id="scrollToTop">
-    <i class="las la-level-up-alt text-white"></i>
-  </button>
-  </div>
-<!-- End of Scroll to top-->
+  <!-- Scroll to top-->
+  <div class="btn-container">
+    <button id="scrollToTop">
+      <i class="las la-level-up-alt text-white"></i>
+    </button>
+    </div>
+  <!-- End of Scroll to top-->
 
   <!-- End of Preloader -->
     <main>
@@ -161,7 +161,7 @@
   </div>
   <div class="row">
     <div class="col-lg-4 col-md-10 pt-5">
-      <div class="d-flex align-item-center justify-content-center">
+      <div class="d-flex align-items-center justify-content-center">
       <div class="services__bg-icon">
       <i class="las la-calendar-alt la-5x services__icon"></i>
       </div>
@@ -235,6 +235,176 @@
   </div>
 </section>
 <!-- End of Team -->
+<!-- Pricing -->
+<section class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="pricing pricing__heading pb-3">Plan & Pricing</h1>
+          <p class="pricing pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit, a sit dignissimos iusto optio!</p>
+        </div>
+      </div>
+      <div class="row py-5">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <ul>
+            <li class="pricing__list">
+              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Children Haircut   _________________________________________________ <span style="color:#ea6f00;">8$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Beard Cut   ________________________________________________________ <span style="color:#ea6f00;">25$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Women's Haircut   _________________________________________________ <span style="color:#ea6f00;">45$</span></p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <ul>
+            <li class="pricing__list">
+              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Children Haircut   _________________________________________________ <span style="color:#ea6f00;">8$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">15$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Beard Cut   ________________________________________________________ <span style="color:#ea6f00;">18$</span></p>
+            </li>
+            <li class="pricing__list">
+              <p class="pricing__text">Women's Haircut   _________________________________________________ <span style="color:#ea6f00; ">25$</span></p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+</section>
+<!-- End of Pricing -->
+<!-- Discount -->
+<section class="py-5">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 discount__bg text-center text-white">
+          <h2 class="py-5 discount__heading">Let's save up to 25% off for new customers!</h2>
+          <p class="discount__text pb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde illum repudiandae corporis quisquam similique incidunt soluta? Voluptate hic quidem nisi architecto, minima praesentium deleniti. Aut.</p>
+          <button class="discount__btn">Appointment</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End of Discount -->
+<!-- Couter Animation -->
+<section class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h1 class="counter__heading pb-3">Our achievements</h1>
+        <p class="pricing pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit, a sit dignissimos iusto optio!</p>
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-lg-3 py-5 px-5 d-block text-center">
+        <i class="las la-heart la-5x counter__icon"></i>
+        <h4 class="counter__text">Happy Customers</h4>
+        <div class="counter__counter" data-target="3300">0</div>
+      </div>
+      <div class="col-lg-3 py-5 px-5 d-block text-center">
+        <i class="las la-cut la-5x counter__icon"></i>
+        <h4 class="counter__text">Visits in this year</h4>
+        <div class="counter__counter" data-target="1130">0</div>
+      </div>
+      <div class="col-lg-3 py-5 px-5 d-block text-center">
+        <i class="las la-award la-5x counter__icon"></i>
+        <h4 class="counter__text">Number of Awards</h4>
+        <div class="counter__counter" data-target="350">0</div>
+      </div>
+      <div class="col-lg-3 py-5 px-5 d-block text-center">
+        <i class="las la-handshake la-5x counter__icon"></i>
+        <h4 class="counter__text">Partners</h4>
+        <div class="counter__counter" data-target="55">0</div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- End of Couter Animation -->
+<!-- Footer -->
+<section class="pt-5">
+  <div class="container-fluid footer__bg">
+    <div class="container">
+      <div class="row footer">
+        <div class="col-xl-4 col-lg-4 col-md-5 col-sm-8 py-5">
+        <a href="index.html" class="footer__brand">
+          <img src="prod-assets/img/logo/LogoMakr_5UyYzp.png"
+          height="50" class="d-inline-block" alt="https://logomakr.com/">
+          <span class="footer__logo-text">BARBER</span>
+        </a>
+        <p class="py-4 footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos ad accusantium</p>
+        <h3 class="footer__phone-number">+354 831 993</h3>
+        <h5 class="footer__email pt-2">barber@gmail.com</h5>
+        </div>
+        <div class="col-xl-2 col-lg-2 col-md-5 col-sm-8 py-3 py-lg-5">
+          <h5 class="footer__heading">Location</h5>
+          <ul class="pt-4">
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Advanced</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Management</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Corporate</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Customer</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Information</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xl-2 col-lg-2 col-md-5 col-sm-8 py-3 py-lg-5">
+          <h5 class="footer__heading">Navigation</h5>
+          <ul class="pt-4">
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">About</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Services</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Portfolio</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Blog</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__item">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-5 col-sm-8 pb-5 pt-3 py-lg-5 text-lg-center">
+          <h5 class="footer__heading">Newsletter</h5>
+          <p class="footer__text pt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <form class="footer__form pt-3">
+          <input type="email" placeholder="Enter your email" class="footer__input">
+          <button class="footer__btn">Send</button>
+          </form>
+        </div>
+      </div>
+
+        <p class="copyright pt-3 text-center">Copyright &copy; 2020 All rights reserved | This template is made <i class="las la-heart" style="color:#ea6f00;"></i> by FRN  </p>
+    </div>
+  </div>
+</section>
+<!-- End of Footer -->
 
 
 
@@ -243,6 +413,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- End of Bootstrap -->
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
     <script src="prod-assets/js/script.js"></script>
 
 </body>
