change width in about image

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-11 py-3 py-lg-3 about-us">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
-          <img src="prod-assets/img/about-us/about-us-image.png" height="570" width="460">
+          <img src="prod-assets/img/about-us/about-us-image.png" class="img-fluid">
         </div>
 
     </div>
@@ -142,7 +142,7 @@
       </div>
       <div class="col-lg-6 col-md-11 py-lg-2 py-5 about-us4">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
-          <img src="prod-assets/img/about-us/about-us-image2.png" height="670" width="460">
+          <img src="prod-assets/img/about-us/about-us-image2.png" class="img-fluid">
         </div>
 
     </div>
@@ -248,38 +248,38 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <ul>
             <li class="pricing__list">
-              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+              <p class="pricing__text">Men's Haircut   ________________________________________________ <span style="color:#ea6f00;">20$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Children Haircut   _________________________________________________ <span style="color:#ea6f00;">8$</span></p>
+              <p class="pricing__text">Children Haircut   _____________________________________________ <span style="color:#ea6f00;">8$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Beard Cut   ________________________________________________________ <span style="color:#ea6f00;">25$</span></p>
+              <p class="pricing__text">Beard Cut   ____________________________________________________ <span style="color:#ea6f00;">25$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+              <p class="pricing__text">Men's Haircut   ________________________________________________ <span style="color:#ea6f00;">20$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Women's Haircut   _________________________________________________ <span style="color:#ea6f00;">45$</span></p>
+              <p class="pricing__text">Women's Haircut   _____________________________________________ <span style="color:#ea6f00;">45$</span></p>
             </li>
           </ul>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
           <ul>
             <li class="pricing__list">
-              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">20$</span></p>
+              <p class="pricing__text">Men's Haircut   ________________________________________________ <span style="color:#ea6f00;">20$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Children Haircut   _________________________________________________ <span style="color:#ea6f00;">8$</span></p>
+              <p class="pricing__text">Children Haircut   _____________________________________________ <span style="color:#ea6f00;">8$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Men's Haircut   ____________________________________________________ <span style="color:#ea6f00;">15$</span></p>
+              <p class="pricing__text">Men's Haircut   ________________________________________________ <span style="color:#ea6f00;">15$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Beard Cut   ________________________________________________________ <span style="color:#ea6f00;">18$</span></p>
+              <p class="pricing__text">Beard Cut   ____________________________________________________ <span style="color:#ea6f00;">18$</span></p>
             </li>
             <li class="pricing__list">
-              <p class="pricing__text">Women's Haircut   _________________________________________________ <span style="color:#ea6f00; ">25$</span></p>
+              <p class="pricing__text">Women's Haircut   _____________________________________________ <span style="color:#ea6f00; ">25$</span></p>
             </li>
           </ul>
         </div>
