Changes in template to make this site full responsive

--- a/index.html
+++ b/index.html
@@ -31,98 +31,98 @@
   <!-- End of Scroll to top-->
 
   <!-- End of Preloader -->
-    <main>
-        <!-- Header -->
-        <header class="header-transparent pt-0 pt-lg-5">
-            <div class="header-main">
-            <nav class="navbar navbar-expand-lg fixed-top">
+  <main>
+    <!-- Header -->
+    <header class="header-transparent pt-0 pt-lg-5">
+        <div class="header-main">
+        <nav class="navbar navbar-expand-lg fixed-top">
 
-                <a href="index.html" class="navbar-brand">
-                    <img src="prod-assets/img/logo/LogoMakr_5UyYzp.png"
-                    height="50" class="d-inline-block" alt="https://logomakr.com/">
-                    BARBER</a>
-                <button class="navbar-toggler" id="nav-button" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
-                    <div class="header-line1"></div>
-                    <div class="header-line2"></div>
-                    <div class="header-line3"></div>
-                  </button>
-                  <div class="collapse navbar-collapse justify-content-end" id="navbarItems">
-                    <ul class="navbar-nav text-center">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                      </li>
+            <a href="index.html" class="navbar-brand">
+                <img src="prod-assets/img/logo/LogoMakr_5UyYzp.png"
+                height="50" class="d-inline-block" alt="https://logomakr.com/">
+                BARBER</a>
+            <button class="navbar-toggler" id="nav-button" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="header-line1"></div>
+                <div class="header-line2"></div>
+                <div class="header-line3"></div>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarItems">
+                <ul class="navbar-nav text-center">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
 
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                      </li>
-                    </ul>
-
-                  </div>
-
-            </nav>
-                </div>
-        </header>
-        <!-- End of Header -->
-
-        <!-- Slider -->
-
-        <div id="sliderControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active slider-area__first-slide">
-
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-8 col-lg-9 col-md-10 col-sm-11 text-white slider-area__caption">
-                                <h4 class="slider-area__label">With Simon Simons</h4>
-                                <h1 class="slider-area__text">Our hair style made your look elegance</h1>
-                                <button type="button" class="my-4 slider-area__button">Make an appointment now >></button>
-                            </div>
-                        </div>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                </ul>
 
               </div>
-              <div class="carousel-item slider-area__second-slide">
+
+        </nav>
+            </div>
+    </header>
+    <!-- End of Header -->
+
+    <!-- Slider -->
+
+    <div id="sliderControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active slider-area__first-slide">
+
                 <div class="container">
                     <div class="row">
-                        <div class="col-xl-8 col-lg-9 col-md-10 col-sm-11 text-white slider-area__second-caption">
-
-                            <h4 class="slider-area__label">With Mathew Carter</h4>
-                            <h1 class="slider-area__text">With him your appearance will be look amazing</h1>
+                        <div class="col-xl-8 col-lg-9 col-md-10 col-sm-11 text-white slider-area__caption">
+                            <h4 class="slider-area__label">With Simon Simons</h4>
+                            <h1 class="slider-area__text">Our hair style made your look elegance</h1>
                             <button type="button" class="my-4 slider-area__button">Make an appointment now >></button>
-
                         </div>
                     </div>
                 </div>
 
-              </div>
+          </div>
+          <div class="carousel-item slider-area__second-slide">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-9 col-md-10 col-sm-11 text-white slider-area__second-caption">
 
+                        <h4 class="slider-area__label">With Mathew Carter</h4>
+                        <h1 class="slider-area__text">With him your appearance will be look amazing</h1>
+                        <button type="button" class="my-4 slider-area__button">Make an appointment now >></button>
+
+                    </div>
+                </div>
             </div>
-
 
           </div>
 
+        </div>
 
-        <!-- End of Slider -->
-    </main>
+
+      </div>
+
+
+    <!-- End of Slider -->
+</main>
 <!-- About us section-->
 <section class="py-5 position-relative">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-11 py-3 py-lg-3 about-us">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
-          <img src="prod-assets/img/about-us/about-us-image.png" class="img-fluid">
+          <img src="prod-assets/img/about-us/about-us-image.png" height="660">
         </div>
 
     </div>
@@ -142,7 +142,7 @@
       </div>
       <div class="col-lg-6 col-md-11 py-lg-2 py-5 about-us4">
         <div class="d-flex align-items-center justify-content-center py-0 py-lg-5">
-          <img src="prod-assets/img/about-us/about-us-image2.png" class="img-fluid">
+          <img src="prod-assets/img/about-us/about-us-image2.png" height="660">
         </div>
 
     </div>
@@ -291,8 +291,8 @@
 <section class="py-5">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12 discount__bg text-center text-white">
-          <h2 class="py-5 discount__heading">Let's save up to 25% off for new customers!</h2>
+      <div class="col-12 col-xs-12 discount__bg text-center text-white">
+          <h2 class="py-5 discount__heading text-center">Let's save up to 25% off for new customers!</h2>
           <p class="discount__text pb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde illum repudiandae corporis quisquam similique incidunt soluta? Voluptate hic quidem nisi architecto, minima praesentium deleniti. Aut.</p>
           <button class="discount__btn">Appointment</button>
       </div>
@@ -305,7 +305,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="counter__heading pb-3">Our achievements</h1>
+        <h1 class="counter__heading pb-3 mx-auto">Our achievements</h1>
         <p class="pricing pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit, a sit dignissimos iusto optio!</p>
       </div>
     </div>
