--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarItems">
                 <ul class="navbar-nav text-center">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
 
@@ -328,7 +328,7 @@
       <div class="col-lg-3 py-5 px-5 d-block text-center">
         <i class="las la-handshake la-5x counter__icon"></i>
         <h4 class="counter__text">Partners</h4>
-        <div class="counter__counter" data-target="55">0</div>
+        <div class="counter__counter" data-target="105">0</div>
       </div>
 
     </div>
@@ -374,19 +374,19 @@
           <h5 class="footer__heading">Navigation</h5>
           <ul class="pt-4">
             <li class="footer__list-item">
-              <a href="#" class="footer__item">About</a>
+              <a href="about.html" class="footer__item">About</a>
             </li>
             <li class="footer__list-item">
-              <a href="#" class="footer__item">Services</a>
+              <a href="services.html" class="footer__item">Services</a>
             </li>
             <li class="footer__list-item">
-              <a href="#" class="footer__item">Portfolio</a>
+              <a href="portfolio.html" class="footer__item">Portfolio</a>
             </li>
             <li class="footer__list-item">
-              <a href="#" class="footer__item">Blog</a>
+              <a href="blog.html" class="footer__item">Blog</a>
             </li>
             <li class="footer__list-item">
-              <a href="#" class="footer__item">Contact</a>
+              <a href="contact.html" class="footer__item">Contact</a>
             </li>
           </ul>
         </div>
